--- a/продвинутый/2/index.html
+++ b/продвинутый/2/index.html
@@ -4,9 +4,9 @@
 	<meta charset=UTF-8>
 	<meta name=viewport content="width=device-width, initial-scale=1">
     <title>Картины.art - портрет на холсте</title>
-    <link rel=stylesheet href=assets/css/bootstrap.css>
+    <link rel=stylesheet href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/animate.css">
-	<link rel=stylesheet href=assets/css/main.css>
+	<link rel=stylesheet href="css/main.css">
 </head>
 <body>
 	<img class="fixed-gift wow pulse infinite" src=assets/img/gift.png alt>
@@ -269,6 +269,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section class=portfolio id=portfolio>
 		<div class=container>
 			<div class=p-heading>Примеры работ</div>
